// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcWithLoading :props should hide loading when isLoading prop is set to false 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <!--v-if-->
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should not render transparent when isLoadingTransparent is set to false 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should pass rest of the props to the wrapped component 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="2"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should pass slots 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div>
        
        <div>
          Prop value: 2
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should render transparent by default 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should render transparent when isLoadingTransparent is set to true 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should show loading when isLoading prop is set to true 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;

exports[`EcWithLoading :props should use iconSize prop 1`] = `
<div
  data-v-app=""
>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-icon ec-loading__icon"
        data-test="ec-loading__icon"
        height="64"
        width="64"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      
      <div
        data-custom="1"
      />
      
    </div>
  </div>
</div>
`;
